--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
 .card-flush{
     box-shadow: 0px 1px 20px 1px #999999;
 }
+
+table, th, td {
+    border: 1px solid black !important;
+    color: "black";
+}
